svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trigger-apii
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trigger-api
