ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    something: nott
  name: matx-httrigger
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: trigger-tls
      hosts:
        - trigger-argocd.wr25.org
  rules:
    - host: trigger-argocd.wr25.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trigger-service
                port:
                  number: 8080
